Adding my bins/aliases and tweaking a few files

--- a/README.rdoc
+++ b/README.rdoc
@@ -22,7 +22,7 @@ the following command.
 
 == Features
 
-I normally place all of my coding projects in ~/code, so this directory 
+I normally place all of my coding projects in ~/Code, so this directory 
 can easily be accessed (and tab completed) with the "c" command.
 
   c railsca<tab>
